--- a/README
+++ b/README
@@ -5,18 +5,17 @@ Running in simulation
 This has been tested with Icarus Verilog (http://iverilog.icarus.com/), although other tool flows are probably similar.  Tests can be run as follows:
   1. Compile the verilog model. This only needs to be recompiled the first time simulation is run or if the verilog sources have changed.
     
-     iverilog -o core.vvp testbench.v lisp_core.v memory.v ulisp.v
+    make
 
-  2. Compile the LISP sources.  This will produce two files: ram.hex, which has the raw program machine code and is loaded by the simulator, and program.lst, which is informational and shows details of the generated code.  For example:
+  2. Compile the LISP sources.  This will produce two files: rom.hex, which has the raw program machine code and is loaded by the simulator, and program.lst, which is informational and shows details of the generated code.  For example:
 
     ./compile.py tests/test1.l
 
 Note that any writes to register index 0 will be printed to standard out by the simulation test harness, which is how most simulation tests work.
 
-  3. Run simulation
+  3. Run simulation.  The simulator will read rom.hex each time it starts.
 
     vvp core.vvp
-
 
 
 Running in hardware
@@ -25,7 +24,7 @@ This has only been tested under Quartus/Altera with the Cyclone II starter kit. 
 
  1. Compile the LISP sources, as above
 
- 2. Synthesize the design.  Note that the synthesis tools will read ram.hex to create the initial values of memory.  If you recompile the LISP sources (thereby changing ram.hex), the design must be re-synthesized.
+ 2. Synthesize the design.  Note that the synthesis tools will read rom.hex to create the values for program ROM.  If you recompile the LISP sources (thereby changing rom.hex), the design must be re-synthesized.
 
  3. Run.  Writing to register 1 will set the values of 8 of the LEDs (one bit per LED).  Registers 2-5 control the 7 segment LED display, and register 6 is an input to sample the four buttons.
 
