--- a/README
+++ b/README
@@ -9,7 +9,7 @@ This has been tested with Icarus Verilog (http://iverilog.icarus.com/), although
 
   2. Compile the LISP sources.  This will produce two files: rom.hex, which has the raw program machine code and is loaded by the simulator, and program.lst, which is informational and shows details of the generated code.  For example:
 
-    ./compile.py tests/test1.l
+    ./compile.py tests/test1.lisp
 
 Note that any writes to register index 0 will be printed to standard out by the simulation test harness, which is how most simulation tests work.
 
