--- a/README
+++ b/README
@@ -20,12 +20,24 @@ Note that any writes to register index 0 will be printed to standard out by the 
 
 Running in hardware
 
-This has only been tested under Quartus/Altera with the Cyclone II starter kit.  The project file is located at altera/LispMicrocontroller.qpf.
+This has only been tested under Quartus/Altera with the Cyclone II starter kit.  There are a couple of projects located 
+under the fpga/ directory:
+  - 7seg: simple program that displays numbers on the 4-digit, 7 segment display
+  - game: a little arcade-style demo with animated sprites
 
- 1. Compile the LISP sources, as above
+To build:
 
- 2. Synthesize the design.  Note that the synthesis tools will read rom.hex to create the values for program ROM.  If you recompile the LISP sources (thereby changing rom.hex), the design must be re-synthesized.
+ 1. Compile the LISP sources.  These are located in the project directory, but must be compiled from the top directory.
+For example, from LispMicrocontroller/
 
- 3. Run.  Writing to register 1 will set the values of 8 of the LEDs (one bit per LED).  Registers 2-5 control the 7 segment LED display, and register 6 is an input to sample the four buttons.
+     ./compile.py fpga/game/game.lisp
+
+rom.hex will be created in the top level LispMicrocontroller/ directory.
+
+ 2. Synthesize the design opening the program file (for example, fpga/game/game.qpf).  Note that the synthesis tools will 
+read rom.hex to create the values for program ROM.  If you recompile the LISP sources (thereby changing rom.hex), the 
+design must be re-synthesized.
+
+ 3. Run, using the programmer included with Quartus.
 
 
