Previously, the '(and' form could be a boolean and or bitwise and.  The compiler would guess based on context. Broke this out explicitly into '(bitwise-and' and '(and'.  The boolean and form can now be used in expressions (with short-ciruit behavior).  For example (assign a (and b c)). Fixed while to use boolean and.

--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Note that any writes to register index 0 will be printed to standard out by the 
 
   3. Run simulation.  The simulator will read rom.hex each time it starts.
 
-    vvp core.vvp
+    vvp sim.vvp
 
 
 Running in hardware
